Fixed attract banner overflow issue

--- a/main.css
+++ b/main.css
@@ -6,36 +6,49 @@
 }
 
 body {
-	background-color: rgb(200, 228, 228);
+	background-color: dimgray;
 	margin: 0;
 }
 
 #attract {
+	width: 100%;
+	height: 25vw;
+	overflow: hidden;
+	background-color: orange;
+}
+
+.cover {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+#attract-overlay {
 	/* width: 100%; */
 	/* background-color: gray; */
 	/* margin: 0; */
 	/* min-height: 30em; */
 	position: absolute;
-	width: 100vw;
+	width: 100%;
 }
 h1 {
-	font-size: 6em;
+	font-size: 3em;
 	color: white;
 	margin: 0;
 	padding: 0.5em;
-	background-color: rgb(37, 65, 168);
+	background-color: rgb(10, 20, 200);
 	transform: rotate(0deg) translatey(0);
-	mix-blend-mode: hard-light;
+	mix-blend-mode: color-dodge;
 }
 
 h2 {
-	font-size: 6em;
+	font-size: 5vw;
 	color: white;
 	margin: 0;
 	padding: 0.5em;
 	background-color: rgb(0, 0, 0);
 	transform: rotate(0deg) translatey(0);
-	mix-blend-mode: exclusion;
+	mix-blend-mode: multiply;
 }
 
 .flex-container {
